--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,18 @@
-<!doctype html><html class="h-100"><head><title>Woog</title><meta http-equiv="Content-Type" content="text/html; charset=utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="shortcut icon" href="favicon.ico"/><link rel="stylesheet" href="bootstrap.css"><link rel="stylesheet" href="main.css"><script src="/jquery-3.5.1.slim.min.js"></script><script src="/bootstrap.min.js"></script><link href="bootstrap.css" rel="stylesheet"><link href="bootstrap.css" rel="stylesheet"></head><body class="h-100"><div id="elmish-app" class="elmish-app h-100" autofocus></div></body></html>
+<!doctype html>
+<html class="h-100">
+<head><title>Woog</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="shortcut icon" href="favicon.ico"/>
+    <link rel="stylesheet" href="bootstrap.css">
+    <link rel="stylesheet" href="main.css">
+    <script src="popper.min.js"></script>
+    <script src="/jquery-3.5.1.slim.min.js"></script>
+    <script src="/bootstrap.min.js"></script>
+    <link href="bootstrap.css" rel="stylesheet">
+    <link href="bootstrap.css" rel="stylesheet">
+</head>
+<body class="h-100">
+<div id="elmish-app" class="elmish-app h-100" autofocus></div>
+</body>
+</html>
